--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+  <my-header></my-header>
+  <my-modal></my-modal>
   <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
 
 </body>
